--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "vue": "vue ui"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "buefy": "^0.9.4",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
