--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
     "vue": "vue ui"
   },
   "dependencies": {
+    "@saeris/vue-spinners": "^1.0.8",
     "axios": "^0.21.1",
     "buefy": "^0.9.4",
+    "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
+    "numeral": "^2.0.6",
+    "sass-loader": "^10.1.0",
     "vue": "^2.6.11",
+    "vue-chartkick": "^0.6.1",
     "vue-router": "^3.4.9"
   },
   "devDependencies": {
